vlib/v/checker/tests/function_variadic_arg_array_decompose.vv
fn sum(a ...int) int {
	mut total := 0
	for x in a {
		total += x
	}
	return total
}

fn main() {
	b := [5, 6, 7]
	println(sum(1, 2, ...b))
}
